--- a/log-output/reader-ts/templates/index.html
+++ b/log-output/reader-ts/templates/index.html
@@ -1,4 +1,3 @@
-<!-- views/index.html -->
 <html lang="en">
   <head>
     <title>My first Koa node.js</title>
@@ -6,7 +5,17 @@
   </head>
   <body>
     <p>{{ logs }}</p>
-    <p> ping/pong {{ pings }}</p>
+    <p> ping/pong: {{ pings }}</p>
   </body>
   <img src="image.jpg" width="300" height="300">
+  <form method="POST" action="/">
+    <br>
+    <input type="text" name="todo" max="10">
+    <input type="submit" value="Submit">
+  </form> 
+  {% for todo in todos %}
+    <li>
+      {{ todo }}
+    </li>
+    {% endfor %}
 </html>
