configmap for message=hello, 2.6

--- a/log-output/reader-ts/templates/index.html
+++ b/log-output/reader-ts/templates/index.html
@@ -1,9 +1,9 @@
 <html lang="en">
   <head>
-    <title>My first Koa node.js</title>
+    <title>Logs-output</title>
     <link rel="stylesheet" href="/style.css">
   </head>
-  <body>
+    <p>{{ message }}</p>
     <p>{{ logs }}</p>
     <p> ping/pong: {{ pings }}</p>
   </body>
